--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,6 +33,7 @@ services:
     restart: always
     tty: true
     volumes:
+      - ./mysql/volume:/var/lib/mysql
       - ./mysql/:/docker-entrypoint-initdb.d
     environment:
       - MYSQL_DATABASE=nodedb
